2014-03-25  Julien Bect  <julien.bect@supelec.fr>

	Test examples using stk_runtests instead of stk_runexamples.

	* examples/01_kriging_basics/stk_example_kb01.m: add %!test
	* examples/01_kriging_basics/stk_example_kb02.m: add %!test
	* examples/01_kriging_basics/stk_example_kb03.m: add %!test
	* examples/01_kriging_basics/stk_example_kb04.m: add %!test
	* examples/01_kriging_basics/stk_example_kb05.m: add %!test
	* examples/01_kriging_basics/stk_example_kb06.m: add %!test
	* examples/01_kriging_basics/stk_example_kb07.m: add %!test
	* examples/02_design_of_experiments/stk_example_doe01.m: add %!test
	* examples/02_design_of_experiments/stk_example_doe02.m: add %!test
	* examples/02_design_of_experiments/stk_example_doe03.m: add %!test
	* examples/03_miscellaneous/stk_example_misc01.m: add %!test
	* examples/03_miscellaneous/stk_example_misc02.m: add %!test
	* misc/test/stk_runexamples.m: removed
	* misc/test/stk_runscript.m: removed

2014-03-23  Julien Bect  <julien.bect@supelec.fr>

	Remove stk_init.m from the Octave package.

	* admin/make_octave_package.m: Create PKG_ADD.m (later renamed to
	PKG_ADD) by renaming stk_init. Therefore, we don't need the
	existing PKG_ADD.m anymore.
	* stk_init.m: Set STK_OCTAVE_PACKAGE to false.
	* etc/octave-pkg/PKG_ADD.m: Removed.

	Minor changes in stk_select_optimizer.

	* misc/optim/stk_select_optimizer.m: Minor changes.

2014-03-21  Julien Bect  <julien.bect@supelec.fr>

	stk_param_relik: Fix help text.

	* paramestim/stk_param_relik.m: Fix help text.

2014-03-18  Julien Bect  <julien.bect@supelec.fr>

	Restore the stk_ prefix for distrib_* functions.

	* misc/distrib/distrib_normal_cdf.m: renamed (from)
	* misc/distrib/distrib_normal_ei.m: renamed (from)
	* misc/distrib/distrib_normal_pdf.m: renamed (from)
	* misc/distrib/distrib_student_cdf.m: renamed (from)
	* misc/distrib/distrib_student_ei.m: renamed (from)
	* misc/distrib/distrib_student_pdf.m: renamed (from)
	* misc/distrib/stk_distrib_normal_cdf.m: rename (to)